--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "V1",
   "main": "index.ts",
   "scripts": {
-    "dev": "ts-node-dev ./src/index.ts"
+    "dev": "ts-node-dev ./src/index.ts",
+    "build": "tsc",
+    "start": "node ./build/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "http-status-codes": "^2.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
