--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
             "error",
             "always"
         ],
-        "@typescript-eslint/no-unused-vars": "off"
+        "@typescript-eslint/no-unused-vars": "off",
+        "@typescript-eslint/ban-types": "off"
     }
 }
