--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "dev": "ts-node-dev ./src/index.ts",
-    "build": "tsc",
     "start": "node ./build/index.js",
+    "build": "tsc -p .",
     "test": "jest"
   },
   "keywords": [],
